--- a/index.css
+++ b/index.css
@@ -5,3 +5,11 @@ body{
     background: url('./background.jpg') bottom center;
     background-size: cover;
 }
+
+.keys {
+    display: flex;
+    flex: 1;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+  }
